add_definitions(-DY2LOG=\"Ruby\")

FILE(GLOB files "${CMAKE_CURRENT_SOURCE_DIR}/*/*.rb")
FILE(GLOB rspec "${CMAKE_CURRENT_SOURCE_DIR}/yast/rspec/*.rb")
FILE(GLOB core_ext "${CMAKE_CURRENT_SOURCE_DIR}/yast/core_ext/*.rb")
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/yast.rb DESTINATION ${RUBY_VENDORLIB_DIR} )
INSTALL(FILES ${files} DESTINATION ${RUBY_VENDORLIB_DIR}/yast)
INSTALL(FILES ${rspec} DESTINATION ${RUBY_VENDORLIB_DIR}/yast/rspec)
INSTALL(FILES ${core_ext} DESTINATION ${RUBY_VENDORLIB_DIR}/yast/core_ext)
INSTALL(FILES yast/y2_exception.rb DESTINATION /usr/share/YaST2/modules)
